--- a/src/model_io/tests/CMakeLists.txt
+++ b/src/model_io/tests/CMakeLists.txt
@@ -6,15 +6,13 @@
 # https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
 # at your option.
 
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
-include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS})
 FIND_PACKAGE(Boost)
 include_directories(${Boost_INCLUDE_DIR})
 
 add_executable(check_urdf_import_export check_urdf_import_export.cpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/urdf/black_icub.urdf ${CMAKE_CURRENT_BINARY_DIR}/black_icub.urdf)
-target_link_libraries(check_urdf_import_export idyntree-kdl idyntree-modelio-urdf-kdl ${orocos_kdl_LIBRARIES} ${urdfdom_LIBRARIES})
+target_link_libraries(check_urdf_import_export idyntree-kdl idyntree-modelio-urdf-kdl ${orocos_kdl_LIBRARIES} ${urdfdom_LIBRARIES} idyntree-testmodels)
 add_test(NAME test_urdf_import_export COMMAND check_urdf_import_export black_icub.urdf)
 
 if (IDYNTREE_USES_SYMORO_PAR)
