--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -6,13 +6,12 @@
 # https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
 # at your option.
 
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 macro(add_oc_test classname)
     set(testsrc ${classname}Test.cpp)
     set(testbinary ${classname}UnitTest)
     set(testname   UnitTest${classname})
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${IDYNTREE_TREE_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
+    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
     target_link_libraries(${testbinary} idyntree-model idyntree-optimalcontrol)
     add_test(NAME ${testname} COMMAND ${testbinary})
 
