--- a/src/tests/yarp_kdl_consistency/CMakeLists.txt
+++ b/src/tests/yarp_kdl_consistency/CMakeLists.txt
@@ -6,14 +6,12 @@
 # https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
 # at your option.
 
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
-
 macro(add_yarp_kdl_consistency_test testName)
     set(testsrc ${testName}Consistency.cpp)
     set(testbinary ${testName}ConsistencyTest)
     set(testname   ${testName}ConsistencyTest)
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR} ${IDYNTREE_TREE_INCLUDE_DIRS})
+    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
     target_link_libraries(${testbinary}  idyntree-modelio-urdf-kdl idyntree-yarp-kdl idyntree-yarp idyntree-core idyntree-kdl idyntree-model ${YARP_LIBRARIES} ${orocos_kdl_LIBRARIES})
     add_test(NAME ${testname} COMMAND ${testbinary})
 
