--- a/src/inverse-kinematics/tests/CMakeLists.txt
+++ b/src/inverse-kinematics/tests/CMakeLists.txt
@@ -1,11 +1,10 @@
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 macro(add_ik_test classname)
   set(testsrc ${classname}UnitTest.cpp)
   set(testbinary ${classname}UnitTest)
   set(testname   UnitTest${classname})
   add_executable(${testbinary} ${testsrc})
-  target_include_directories(${testbinary} PRIVATE ${IDYNTREE_TREE_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
-  target_link_libraries(${testbinary} idyntree-model idyntree-inverse-kinematics)
+  target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
+  target_link_libraries(${testbinary} idyntree-model idyntree-inverse-kinematics idyntree-testmodels)
   add_test(NAME ${testname} COMMAND ${testbinary})
 
   if(IDYNTREE_RUN_VALGRIND_TESTS)
