--- a/examples/fixedBaseGravityCompensation/CMakeLists.txt
+++ b/examples/fixedBaseGravityCompensation/CMakeLists.txt
@@ -17,7 +17,7 @@ source_group("Source Files" FILES ${folder_source})
 add_executable(${PROJECT_NAME} ${folder_source})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${YARP_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES}
+target_link_libraries(${PROJECT_NAME} YARP::YARP_os YARP::YARP_math
                                      ${iDynTree_LIBRARIES})
 
 
