--- a/src/tests/kdl_tests/CMakeLists.txt
+++ b/src/tests/kdl_tests/CMakeLists.txt
@@ -17,7 +17,7 @@ macro(add_all_components_test testName)
     set(testname   test_${testName})
     add_executable(${testbinary} ${testsrc})
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-core idyntree-high-level-kdl idyntree-yarp-kdl ${YARP_LIBRARIES} ${orocos_kdl_LIBRARIES} idyntree-testmodels)
+    target_link_libraries(${testbinary} idyntree-core idyntree-high-level-kdl idyntree-yarp-kdl YARP::YARP_os YARP::YARP_math ${orocos_kdl_LIBRARIES} idyntree-testmodels)
     add_test(NAME ${testname} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
