Add definition of namespaced targets even for the build tree
It is useful to define an alias of the iDynTree libraries with the scope of the exported
library itself (i.e. iDynTree::<lib>) because (1) you can link against it with the exact same syntax
of an imported library, that is useful when iDynTree is used in a bigger project
via add_subdirectory and (2) because names having a double-colon (::) are
always treated as the name of either an alias or imported target. Any attempt
to use such a name for a different target type will result in an error.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -109,6 +109,7 @@ include_directories(include/iDynTree/Core)
 set(libraryname idyntree-core)
 
 add_library(${libraryname} ${IDYNTREE_CORE_EXP_SOURCES} ${IDYNTREE_CORE_EXP_HEADERS} ${IDYNTREE_CORE_EXP_PRIVATE_INCLUDES})
+add_library(iDynTree::${libraryname} ALIAS ${libraryname})
 
 if (DEFINED CMAKE_COMPILER_IS_GNUCXX)
   if(${CMAKE_COMPILER_IS_GNUCXX} AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 5)
