Change compatibility of CMake config files from SameMajorVersion to AnyNewerVersion
Even if in the future major version can be breaking, for the main classes it would be 
relativly easy to have a codebase that is compatible with multiple iDynTree major versions. 
For this reason, I think it make sense to switch the CMake policy to `AnyNewerVersion` .
If any downstream user wants to use a different policy, it can always manually check inspect the `iDynTree_VERSION` 
CMake variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if(NOT IDYNTREE_ONLY_DOCS)
     include(InstallBasicPackageFiles)
     install_basic_package_files(iDynTree VARS_PREFIX ${VARS_PREFIX}
                                          VERSION ${${VARS_PREFIX}_VERSION}
-                                         COMPATIBILITY SameMajorVersion
+                                         COMPATIBILITY AnyNewerVersion
                                          TARGETS_PROPERTY ${VARS_PREFIX}_TARGETS
                                          NO_CHECK_REQUIRED_COMPONENTS_MACRO
                                          ENABLE_COMPATIBILITY_VARS
