--- a/src/tools/yarprobotstatepublisher/CMakeLists.txt
+++ b/src/tools/yarprobotstatepublisher/CMakeLists.txt
@@ -2,16 +2,14 @@
 # All Rights Reserved.
 # Authors: Silvio Traversaro <silvio.traversaro@iit.it>
 
-project(yarprobotstatepublisher)
-
-add_executable(${PROJECT_NAME}
+add_executable(yarprobotstatepublisher
     include/robotstatepublisher.h
     src/main.cpp
     src/robotstatepublisher.cpp)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(yarprobotstatepublisher PRIVATE include)
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(yarprobotstatepublisher
     YARP::YARP_init
     YARP::YARP_os
     YARP::YARP_dev
@@ -19,4 +17,4 @@ target_link_libraries(${PROJECT_NAME}
     idyntree-high-level
     idyntree-yarp)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+install(TARGETS yarprobotstatepublisher DESTINATION bin)
