GitHub Actions: add compilation in Debug build type

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build_type: [Release]
+        build_type: [Release, Debug]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
