Added SO(3) utilities.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -53,7 +53,8 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/Axis.h
                               include/iDynTree/Core/SparseMatrix.h
                               include/iDynTree/Core/Triplets.h
                               include/iDynTree/Core/CubicSpline.h
-                              include/iDynTree/Core/Span.h)
+                              include/iDynTree/Core/Span.h
+                              include/iDynTree/Core/SO3Utils.h)
 
 
 set(IDYNTREE_CORE_EXP_SOURCES src/Axis.cpp
@@ -93,7 +94,8 @@ set(IDYNTREE_CORE_EXP_SOURCES src/Axis.cpp
                               src/PrivateUtils.cpp
                               src/SparseMatrix.cpp
                               src/Triplets.cpp
-                              src/CubicSpline.cpp)
+                              src/CubicSpline.cpp
+                              src/SO3Utils.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_CORE_EXP_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_CORE_EXP_HEADERS})
