Add cache GitHub Action to cache dependency compiled from source
Furthermore, switch to use releases for YCM, YARP and ICUB for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,11 @@ on:
   # * is a special character in YAML so you have to quote this string
   # Execute a "nightly" build at 2 AM UTC 
   - cron:  '0 2 * * *'
-  
+
+env:
+  YCM_TAG: v0.11.0
+  YARP_TAG: v3.3.2
+  ICUB_TAG: v1.15.0
   
 jobs:
   build:
@@ -56,60 +60,67 @@ jobs:
                              libboost-thread-dev liborocos-kdl-dev libeigen3-dev swig qtbase5-dev qtdeclarative5-dev qtmultimedia5-dev libqt5charts5-dev \
                              libxml2-dev liburdfdom-dev libtinyxml-dev liburdfdom-dev liboctave-dev python-dev valgrind libassimp-dev
         
+    - name: Cache Source-based Dependencies
+      id: cache-source-deps
+      uses: actions/cache@v1
+      with:
+        path: install_deps
+        key: source-deps-${{ runner.os }}-ycm-${{ env.YCM_TAG }}-yarp-${{ env.YARP_TAG }}-icub-${{ env.ICUB_TAG }}
+    
     - name: Source-based Dependencies [Windows] 
-      if: matrix.os == 'windows-latest-disable-until-issue-569-is-solved'
+      if: steps.cache-source-deps.outputs.cache-hit != 'true' && matrix.os == 'windows-latest-disable-until-issue-569-is-solved'
       shell: bash
       run: |
         # YCM
-        git clone https://github.com/robotology/ycm
+        git clone -b ${YCM_TAG} https://github.com/robotology/ycm
         cd ycm
         mkdir -p build
         cd build
-        cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+        cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target INSTALL 
         # YARP
-        git clone https://github.com/robotology/yarp
+        git clone -b ${YARP_TAG} https://github.com/robotology/yarp
         cd yarp
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
-              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target INSTALL 
         # Workaround for https://github.com/robotology-dependencies/robotology-vcpkg-binary-ports/issues/3
         export IPOPT_DIR=${VCPKG_INSTALLATION_ROOT}/installed/x64-windows
         # ICUB
-        git clone https://github.com/robotology/icub-main
+        git clone -b ${ICUB_TAG} https://github.com/robotology/icub-main
         cd icub-main
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
-              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target INSTALL 
         
     - name: Source-based Dependencies [Ubuntu/macOS] 
-      if: matrix.os == 'ubuntu-latest' || matrix.os == 'macOS-latest'
+      if: steps.cache-source-deps.outputs.cache-hit != 'true' && (matrix.os == 'ubuntu-latest' || matrix.os == 'macOS-latest')
       shell: bash
       run: |
         # YCM
-        git clone https://github.com/robotology/ycm
+        git clone -b ${YCM_TAG} https://github.com/robotology/ycm
         cd ycm
         mkdir -p build
         cd build
-        cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+        cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target install 
         # YARP
-        git clone https://github.com/robotology/yarp
+        git clone -b ${YARP_TAG} https://github.com/robotology/yarp
         cd yarp
         mkdir -p build
         cd build
-        cmake  -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+        cmake  -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target install 
         # ICUB
-        git clone https://github.com/robotology/icub-main
+        git clone -b ${ICUB_TAG} https://github.com/robotology/icub-main
         cd icub-main
         mkdir -p build
         cd build
-        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install_deps ..
         cmake --build . --config ${{ matrix.build_type }} --target install 
  
     # ===================
@@ -125,7 +136,7 @@ jobs:
         cd build
         # ipopt disabled until https://github.com/robotology/idyntree/issues/274 is fixed
         # assimp disabled until https://github.com/robotology/idyntree/issues/601 is fixed
-        cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install \
+        cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps \
               -DIDYNTREE_COMPILE_TESTS:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=OFF -DIDYNTREE_USES_ICUB_MAIN:BOOL=OFF -DIDYNTREE_RUN_VALGRIND_TESTS:BOOL=ON \
               -DIDYNTREE_USES_PYTHON:BOOL=OFF -DIDYNTREE_USES_OCTAVE:BOOL=OFF -DIDYNTREE_USES_IPOPT:BOOL=OFF -DIDYNTREE_USES_ASSIMP:BOOL=OFF \
               -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
@@ -137,7 +148,7 @@ jobs:
         mkdir -p build
         cd build
         # IDYNTREE_USES_ASSIMP set to OFF as a workaround for https://github.com/robotology/idyntree/issues/599
-        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DIDYNTREE_COMPILE_TESTS:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=ON \
+        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps -DIDYNTREE_COMPILE_TESTS:BOOL=ON -DIDYNTREE_USES_YARP:BOOL=ON \
               -DIDYNTREE_USES_ICUB_MAIN:BOOL=ON -DIDYNTREE_USES_Qt5:BOOL=ON  -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DIDYNTREE_USES_ASSIMP:BOOL=OFF \
               -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
 
@@ -188,7 +199,7 @@ jobs:
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
-              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install .. 
+              -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps;${GITHUB_WORKSPACE}/install .. 
         cmake --build . --config ${{ matrix.build_type }}
         
     - name: Compile Examples [Ubuntu/macOS]
@@ -198,7 +209,7 @@ jobs:
         cd examples
         mkdir -p build
         cd build
-        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install .. 
+        cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install_deps;${GITHUB_WORKSPACE}/install .. 
         cmake --build . --config ${{ matrix.build_type }}
 
         
