Fix  find_package(iDynTree) when IDYNTREE_USES_ASSIMP is ON and BUILD_SHARED_LIBS is  OFF
If iDynTree builds static libraries, then the `iDynTreeConfig.cmake` should call `find_dependency(assimp REQUIRED)`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(VARS_PREFIX "iDynTree")
 
 set(${VARS_PREFIX}_MAJOR_VERSION 1)
 set(${VARS_PREFIX}_MINOR_VERSION 0)
-set(${VARS_PREFIX}_PATCH_VERSION 4)
+set(${VARS_PREFIX}_PATCH_VERSION 5)
 set(${VARS_PREFIX}_VERSION ${${VARS_PREFIX}_MAJOR_VERSION}.${${VARS_PREFIX}_MINOR_VERSION}.${${VARS_PREFIX}_PATCH_VERSION})
 
 # Pick up our CMake scripts - they are all in the cmake subdirectory.
@@ -73,6 +73,9 @@ if(NOT IDYNTREE_ONLY_DOCS)
     list(APPEND _IDYNTREE_EXPORTED_DEPENDENCIES_ONLY_STATIC LibXml2)
     if(IDYNTREE_USES_OSQPEIGEN)
         list(APPEND _IDYNTREE_EXPORTED_DEPENDENCIES_ONLY_STATIC OsqpEigen)
+    endif()
+    if(IDYNTREE_USES_ASSIMP)
+        list(APPEND _IDYNTREE_EXPORTED_DEPENDENCIES_ONLY_STATIC assimp)
     endif()
 
     include(InstallBasicPackageFiles)
