--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -21,3 +21,11 @@ endif()
 # We imported the MIT-licensed source code from https://github.com/night-shift/fpconv/tree/4a087d1b2df765baa409536931916a2c082cdda4
 add_library(idyntree-private-fpconv OBJECT fpconv/fpconv.c)
 target_include_directories(idyntree-private-fpconv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/fpconv)
+
+
+# mesh2tri ( https://it.mathworks.com/matlabcentral/fileexchange/28327-mesh2tri ) is a matlab function that allows converting a mesh format into a triangulation format.
+# It is only installed if Matlab is enabled, not tested in Octave yet.
+if (IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
+    # We save the location of mesh2tri in a variable that is then accessible to the test
+    set(IDYNTREE_INTERNAL_MESH2TRI_PATH "${CMAKE_CURRENT_LIST_DIR}/mesh2tri" PARENT_SCOPE)
+endif()
