Migrate to always use the Eigen3::Eigen imported target
Furthermore, modernize the involved CMake commands.

--- a/examples/KinDynComputationsWithEigen/CMakeLists.txt
+++ b/examples/KinDynComputationsWithEigen/CMakeLists.txt
@@ -3,15 +3,16 @@
 # CopyPolicy: Released under the terms of the GNU LGPL v2.0+.
 #
 
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.5)
 
 project(KinDynComputationsWithEigen)
 
 find_package(iDynTree REQUIRED)
+
 # Note that while Eigen3 is using internally by iDynTree
 # its public (installed) headers do not use it, so if you
 # want to use Eigen3 in your project you need to find and include it
-find_package(Eigen3 REQUIRED)
+find_package(Eigen3 CONFIG REQUIRED)
 
 SET(folder_source main.cpp)
 
@@ -19,7 +20,7 @@ source_group("Source Files" FILES ${folder_source})
 
 add_executable(${PROJECT_NAME} ${folder_source})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${EIGEN3_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 message(STATUS "iDynTree_LIBRARIES : ${iDynTree_LIBRARIES}")
 target_link_libraries(${PROJECT_NAME} ${iDynTree_LIBRARIES})
 
