--- a/src/high-level/tests/CMakeLists.txt
+++ b/src/high-level/tests/CMakeLists.txt
@@ -3,10 +3,10 @@ macro(add_unit_test_hl classname)
     set(testbinary ${classname}UnitTest)
     set(testname   UnitTest${classname})
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-high-level idyntree-modelio-urdf idyntree-testmodels)
+    target_link_libraries(${testbinary} PRIVATE idyntree-core idyntree-model idyntree-high-level idyntree-modelio-urdf
+                                                idyntree-testmodels Eigen3::Eigen)
     add_test(NAME ${testname} COMMAND ${testbinary})
-    
+
     if(IDYNTREE_RUN_VALGRIND_TESTS)
         add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} $<TARGET_FILE:${testbinary}>)
     endif()
