--- a/src/optimalcontrol/CMakeLists.txt
+++ b/src/optimalcontrol/CMakeLists.txt
@@ -107,12 +107,11 @@ endif()
 add_library(${libraryname} ${PUBLIC_HEADERS} ${INTEGRATORS_PUBLIC_HEADERS} ${OCSOLVERS_PUBLIC_HEADERS} ${OPTIMIZERS_HEADERS} ${SOURCES} ${OPTIMIZERS_SOURCES})
 add_library(iDynTree::${libraryname} ALIAS ${libraryname})
 
-target_include_directories(${libraryname} SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(${libraryname} SYSTEM PRIVATE ${INCLUDE_LIST})
 target_include_directories(${libraryname} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 target_include_directories(${libraryname} PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 target_link_libraries(${libraryname} PUBLIC idyntree-core idyntree-model)
-target_link_libraries(${libraryname} PRIVATE ${LINK_LIST})
+target_link_libraries(${libraryname} PRIVATE ${LINK_LIST} Eigen3::Eigen)
 
 if (IDYNTREE_USES_IPOPT)
     target_compile_definitions(${libraryname} PRIVATE ${IPOPT_DEFINITIONS})
