--- a/src/inverse-kinematics/tests/CMakeLists.txt
+++ b/src/inverse-kinematics/tests/CMakeLists.txt
@@ -3,8 +3,7 @@ macro(add_ik_test classname)
   set(testbinary ${classname}UnitTest)
   set(testname   UnitTest${classname})
   add_executable(${testbinary} ${testsrc})
-  target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-  target_link_libraries(${testbinary} idyntree-model idyntree-inverse-kinematics idyntree-testmodels)
+  target_link_libraries(${testbinary} PRIVATE idyntree-model idyntree-inverse-kinematics idyntree-testmodels Eigen3::Eigen)
   add_test(NAME ${testname} COMMAND ${testbinary})
 
   if(IDYNTREE_RUN_VALGRIND_TESTS)
