--- a/src/sensors/tests/CMakeLists.txt
+++ b/src/sensors/tests/CMakeLists.txt
@@ -3,8 +3,7 @@ macro(add_unit_test classname)
     set(testbinary ${classname}UnitTest)
     set(testname   UnitTest${classname})
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-sensors idyntree-testmodels)
+    target_link_libraries(${testbinary} PRIVATE idyntree-sensors idyntree-testmodels Eigen3::Eigen)
     add_test(NAME ${testname} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
@@ -16,4 +15,4 @@ endmacro()
 add_unit_test(SensorsList)
 add_unit_test(ThreeAxisForceTorqueContactSensor)
 add_unit_test(ReducedModelWithFT)
-target_link_libraries(ReducedModelWithFTUnitTest idyntree-high-level)
+target_link_libraries(ReducedModelWithFTUnitTest PRIVATE idyntree-high-level)
