--- a/src/solid-shapes/tests/CMakeLists.txt
+++ b/src/solid-shapes/tests/CMakeLists.txt
@@ -11,8 +11,7 @@ macro(add_unit_test classname)
     set(testbinary ${classname}UnitTest)
     set(testname   UnitTest${classname})
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-solid-shapes)
+    target_link_libraries(${testbinary} PRIVATE idyntree-solid-shapes Eigen3::Eigen)
     add_test(NAME ${testname} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
