--- a/src/tests/yarp_benchmark/CMakeLists.txt
+++ b/src/tests/yarp_benchmark/CMakeLists.txt
@@ -10,8 +10,7 @@ macro(add_yarp_benchmark benchmarkName)
     set(testsrc ${benchmarkName}Benchmark.cpp)
     set(testbinary ${benchmarkName}Benchmark)
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-icub idyntree-core idyntree-model idyntree-testmodels)
+    target_link_libraries(${testbinary} PRIVATE idyntree-icub idyntree-core idyntree-model idyntree-testmodels Eigen3::Eigen)
 endmacro()
 
 add_yarp_benchmark(PseudoInverse)
